# c_mcp_server

./: .clangd  CMakeLists.txt  README.md
examples/demo_server/: main.c
examples/echo_server/: main.c
examples/http_demo/: main.c
include/mcp/: mcp.h
src/: mcp_http.c  mcp_internal.h  mcp_jsonrpc.c  mcp_log.c  mcp_server.c  mcp_stdio.c
tests/: test_basic.c  test_http.c
